--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sproc"
-version = "0.2.0"
+version = "0.2.1"
 edition = "2021"
 authors = ["hkau"]
 description = "Simple service management"
@@ -11,6 +11,7 @@ license = "MIT"
 [dependencies]
 axum = "0.7.5"
 clap = { version = "4.5.8", features = ["derive"] }
+reqwest = { version = "0.12.5", features = ["json"] }
 serde = { version = "1.0.203", features = ["derive"] }
 sysinfo = "0.30.12"
 tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
@@ -20,3 +21,6 @@ toml = "0.8.14"
 path = "src/main.rs"
 name = "sproc"
 test = false
+
+[lib]
+doctest = false
