--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sproc"
-version = "0.3.0"
+version = "0.4.0"
 edition = "2021"
 authors = ["hkau"]
 description = "Simple service management"
@@ -9,7 +9,7 @@ repository = "https://github.com/hkauso/sproc"
 license = "MIT"
 
 [dependencies]
-axum = "0.7.5"
+axum = { version = "0.7.5", features = ["macros"] }
 clap = { version = "4.5.8", features = ["derive"] }
 reqwest = { version = "0.12.5", features = ["json"] }
 serde = { version = "1.0.203", features = ["derive"] }
