--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sproc"
-version = "0.5.0"
+version = "0.5.5"
 edition = "2021"
 authors = ["hkau"]
 description = "Simple service management"
@@ -11,7 +11,7 @@ license = "MIT"
 [dependencies]
 askama = { version = "0.12.1", features = ["with-axum"] }
 askama_axum = "0.4.0"
-axum = { version = "0.7.5", features = ["macros"] }
+axum = { version = "0.7.5", features = ["macros", "form"] }
 clap = { version = "4.5.8", features = ["derive"] }
 reqwest = { version = "0.12.5", features = ["json"] }
 serde = { version = "1.0.203", features = ["derive"] }
