add: authman add(sproc server): accounts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,5 +4,6 @@ members = [
     "crates/sproc",
     "crates/xsu-util",
     "crates/xsu-appman", 
-    "crates/xsu-open"
+    "crates/xsu-open",
+    "crates/xsu-authman"
 ]
