--- a/crates/sproc/Cargo.toml
+++ b/crates/sproc/Cargo.toml
@@ -12,6 +12,7 @@ license = "MIT"
 askama = { version = "0.12.1", features = ["with-axum"] }
 askama_axum = "0.4.0"
 axum = { version = "0.7.5", features = ["macros", "form"] }
+axum-extra = { version = "0.9.3", features = ["cookie"] }
 clap = { version = "4.5.8", features = ["derive"] }
 reqwest = { version = "0.12.5", features = ["json"] }
 serde = { version = "1.0.203", features = ["derive"] }
@@ -19,6 +20,7 @@ sysinfo = "0.30.12"
 tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
 toml = "0.8.14"
 xsu-util = { path = "../xsu-util" }
+xsu-authman = { path = "../xsu-authman" }
 
 [[bin]]
 path = "src/main.rs"
@@ -26,4 +28,5 @@ name = "sproc"
 test = false
 
 [lib]
+path = "src/lib.rs"
 doctest = false
