--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ members = [
     "crates/xsu-util",
     "crates/xsu-appman", 
     "crates/xsu-open",
-    "crates/xsu-authman"
+    "crates/xsu-authman", 
+    "crates/xsu-docshare"
 ]
