--- a/crates/sproc/Cargo.toml
+++ b/crates/sproc/Cargo.toml
@@ -9,10 +9,10 @@ repository = "https://github.com/hkauso/xsu"
 license = "MIT"
 
 [features]
-postgres = ["xsu-authman/postgres", "xsu-docshare/postgres"]
-mysql = ["xsu-authman/mysql", "xsu-docshare/mysql"]
-sqlite = ["xsu-authman/sqlite", "xsu-docshare/sqlite"]
-default = ["xsu-authman/sqlite", "xsu-docshare/sqlite"]
+postgres = ["xsu-dataman/postgres", "xsu-authman/postgres", "xsu-docshare/postgres"]
+mysql = ["xsu-dataman/mysql", "xsu-authman/mysql", "xsu-docshare/mysql"]
+sqlite = ["xsu-dataman/sqlite", "xsu-authman/sqlite", "xsu-docshare/sqlite"]
+default = ["xsu-dataman/sqlite", "xsu-authman/sqlite", "xsu-docshare/sqlite"]
 
 [dependencies]
 askama = { version = "0.12.1", features = ["with-axum"] }
@@ -26,8 +26,9 @@ sysinfo = "0.30.12"
 tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
 toml = "0.8.14"
 xsu-util = { path = "../xsu-util" }
-xsu-authman = { path = "../xsu-authman" }
-xsu-docshare = { path = "../xsu-docshare" }
+xsu-dataman = { path = "../xsu-dataman", default-features = false }
+xsu-authman = { path = "../xsu-authman", default-features = false }
+xsu-docshare = { path = "../xsu-docshare", default-features = false }
 
 [[bin]]
 path = "src/main.rs"
