--- a/crates/xsu-cliff/Cargo.toml
+++ b/crates/xsu-cliff/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "xsu-cliff"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 authors = ["hkau"]
 description = "Application web UI"
@@ -31,6 +31,7 @@ xsu-dataman = { path = "../xsu-dataman", default-features = false }
 xsu-authman = { path = "../xsu-authman", default-features = false }
 xsu-docshare = { path = "../xsu-docshare", default-features = false }
 sproc = { path = "../sproc", default-features = false }
+serde_json = "1.0.120"
 
 [[bin]]
 path = "src/main.rs"
