--- a/crates/xsu-util/Cargo.toml
+++ b/crates/xsu-util/Cargo.toml
@@ -9,6 +9,7 @@ repository = "https://github.com/hkauso/xsu"
 license = "MIT"
 
 [dependencies]
+ammonia = "4.0.0"
 pulldown-cmark = "0.11.0"
 
 [lib]
