add: lily base TODO: finish lily

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,7 @@ members = [
     "crates/xsu-authman", 
     "crates/xsu-docshare",
     "crates/xsu-dataman",
-    "crates/xsu-cliff"
-, "crates/xsu-slime"]
+    "crates/xsu-cliff", 
+    "crates/xsu-slime", 
+    "crates/xsu-lily"
+]
