--- a/crates/xsu-util/Cargo.toml
+++ b/crates/xsu-util/Cargo.toml
@@ -10,8 +10,11 @@ license = "MIT"
 
 [dependencies]
 ammonia = "4.0.0"
+hex_fmt = "0.3.0"
 pulldown-cmark = "0.11.0"
 serde = { version = "1.0.204", features = ["derive"] }
+sha2 = "0.10.8"
+uuid = { version = "1.10.0", features = ["v4"] }
 
 [lib]
 doctest = false
