--- a/crates/xsu-lily/Cargo.toml
+++ b/crates/xsu-lily/Cargo.toml
@@ -18,6 +18,8 @@ toml = "0.8.19"
 tar = "0.4.41"
 flate2 = "1.0.31"
 tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
+globset = "0.4.14"
+walkdir = "2.5.0"
 
 [[bin]]
 path = "src/main.rs"
